--- a/ML.ipynb
+++ b/ML.ipynb
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the rand score k-means did poorly on well-defined cluster while OPTICS did excellently. OPTICS is good when there are dense cluster while k-means did poorly. k-means uses the distance as the part of the calculation rather than reachability (how many neighbour within a given radius), hence why OPTICS is good for this kind of datasets."
+    "Using the rand score k-means did poorly on well-defined cluster while OPTICS did excellently. OPTICS is good when there are clusters with even density while k-means did poorly. k-means uses the distance as the part of the calculation rather than reachability (how many neighbour within a given radius), hence why OPTICS is good for this kind of datasets."
    ]
   },
   {
@@ -304,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the kPCA the data can be decomposed non-linearly while PCA can not. With the given dataset above we can see kPCA able to divide and project the data into two seperate areas while PCA failed to do so."
+    "Using the kPCA the data can be decomposed non-linearly while PCA can not. With the given dataset above we can see kPCA able to divide and project the data into two seperate areas while PCA failed to do so. For this reasons, PCA is better to use on data that can be seperated with linear plane otherwise kPCA can be a good alternative."
    ]
   }
  ],
